# embed-lab-homework

./: README.md
HM1/: ENV.uvprojx
HM1/CORE/: core_cm3.c
HM1/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/STM32100E-EVAL/: misc.d  stm32100e_eval_fsmc_onenand.d  stm32_eval.d  stm32f10x_can.d  stm32f10x_cec.d  stm32f10x_crc.d  stm32f10x_dbgmcu.d  stm32f10x_dma.d  stm32f10x_exti.d  stm32f10x_flash.d  stm32f10x_it.d  stm32f10x_rtc.d  stm32f10x_wwdg.d
HM1/USER/: .clangd  ENV+HM1.cprj  ENV+HM1.uvguix.22H2  ENV+HM1.uvoptx  ENV.cbuild-set.yml  ENV.uvoptx  main.c
HM1/USER/Objects/: ENV.build_log.htm  ENV_HM1.dep
HM1/USER/RTE/_HM1/: RTE_Components.h
HM1/USER/tmp/ENV/HM1/: .ninja_deps  CMakeLists.txt  ENV_ExecutableFile.map  build.ninja  cmake_install.cmake
HM1/USER/tmp/ENV/HM1/.cache/clangd/index/: system_stm32f10x.c.C23356BF5F780269.idx
HM2/: ENV.uvguix.22H2
HM2/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/: Project.uvguix.22H2
HM2/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/RTE/_STM32100E-EVAL_RCT6/: RTE_Components.h
HM2/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/STM32100E-EVAL/: Project_STM32100E-EVAL_RCT6.dep  STM32100E-EVAL.build_log.htm  core_cm3.d  main.d  stm32100e_eval_cec.d  stm32100e_eval_lcd.d  stm32_eval_i2c_tsensor.d  stm32_eval_spi_flash.d  stm32f10x_bkp.d  stm32f10x_dac.d  stm32f10x_i2c.d  stm32f10x_iwdg.d  stm32f10x_rcc.d  stm32f10x_spi.d  stm32f10x_tim.d  stm32f10x_usart.d
HM2/USER/: ENV+HM2.uvguix.22H2  ENV+HM2.uvoptx  ENV+HM2.uvprojx  ENV.cbuild-idx.yml  ENV.cproject.yml  ENV.csolution.yml  main.c
HM2/USER/Objects/: core_cm3.d
HM2/USER/tmp/ENV/HM1/: .ninja_log  ENV_ExecutableFile.map
HM2/USER/tmp/ENV/HM1/.cache/clangd/index/: main.c.1518559149555767.idx  stm32f10x_conf.h.3F62241D86265898.idx  stm32f10x_it.c.42E43B3401D1E9E4.idx
HM3/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/: Project.uvoptx  Project.uvprojx
HM3/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/MDK-ARM/STM32100E-EVAL/: stm32100e_eval_fsmc_sram.d  stm32100e_eval_ioe.d  stm32_eval_spi_sd.d  stm32f10x_adc.d  stm32f10x_fsmc.d  stm32f10x_gpio.d  stm32f10x_pwr.d  stm32f10x_sdio.d  system_stm32f10x.d
HM3/USER/: .clangd  ENV+HM1.cbuild.yml  ENV+HM1.cprj  ENV+HM2.uvguix.22H2  ENV+HM3.uvguix.22H2  ENV+HM3.uvoptx  ENV.uvguix.22H2  main.c
HM3/USER/Listings/: ENV.map
HM3/USER/tmp/ENV/HM1/: CMakeCache.txt  CMakeLists.txt  ENV_ExecutableFile.map
HM3/USER/tmp/ENV/HM1/.cache/clangd/index/: stm32f10x_it.h.0F03B2D321CE8D23.idx
SimResource/: HM1.mkv  HM3.mkv
